<resources>
    <string name="app_name">RangeSeekBar</string>


    <string name="title">RangeBar</string>
    <string name="tickCount">tickCount = 7</string>
    <string name="tickHeight">tickHeight = 24</string>
    <string name="barWeight">barWeight = 2</string>
    <string name="barColor">barColor = #CCCCCC</string>
    <string name="connectingLineWeight">connectingLineWeight = 4</string>
    <string name="connectingLineColor">connectingLineColor = #33B5E5</string>
    <string name="thumbRadius">thumbRadius = N/A</string>
    <string name="thumbColorNormal">thumbColorNormal = N/A</string>
    <string name="thumbColorPressed">thumbColorPressed = N/A</string>
    <string name="confirmNewColor">New</string>
    <string name="confirmDefaultColor">Default</string>
    <string name="colorPickerTitle">Select a Color</string>
    <string name="resetThumbColors">Reset Thumb Colors</string>
    <string name="setImgToRangeBar">set Thumb img</string>
    <string name="leftIndexValue">0</string>
    <string name="leftIndex">leftIndex</string>
    <string name="rightIndexValue">6</string>
    <string name="rightIndex">rightIndex</string>
    <string name="refresh">Refresh Indices</string>
</resources>
