<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:id="@+id/mylayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".MainActivity" >

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/title"
            android:textSize="40sp" />

        <com.dalong.rangeseekbar.RangeBar
            xmlns:custom="http://schemas.android.com/apk/res-auto"
            android:id="@+id/rangebar1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:layout_marginTop="50dp"
            custom:tickCount="7" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="40dp"
            android:paddingRight="40dp" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/leftIndex"
                        style="@style/TextTheme"
                        android:layout_marginTop="0dp"
                        android:text="@string/leftIndex" />

                    <EditText
                        android:id="@+id/leftIndexValue"
                        style="@style/TextTheme"
                        android:layout_marginTop="0dp"
                        android:inputType="number"
                        android:text="@string/leftIndexValue"
                        android:textSize="35sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/rightIndex"
                        style="@style/TextTheme"
                        android:layout_marginTop="0dp"
                        android:text="@string/rightIndex" />

                    <EditText
                        android:id="@+id/rightIndexValue"
                        style="@style/TextTheme"
                        android:layout_marginTop="0dp"
                        android:inputType="number"
                        android:text="@string/rightIndexValue"
                        android:textSize="35sp" />
                </LinearLayout>
            </LinearLayout>

            <Button
                android:id="@+id/refresh"
                style="@style/ButtonTheme"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/refresh"
                android:textColor="#33B5E5"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/tickCount"
                style="@style/TextTheme"
                android:text="@string/tickCount" />

            <SeekBar
                android:id="@+id/tickCountSeek"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:progress="7" />

            <TextView
                android:id="@+id/tickHeight"
                style="@style/TextTheme"
                android:text="@string/tickHeight" />

            <SeekBar
                android:id="@+id/tickHeightSeek"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="75"
                android:progress="24" />

            <TextView
                android:id="@+id/barWeight"
                style="@style/TextTheme"
                android:text="@string/barWeight" />

            <SeekBar
                android:id="@+id/barWeightSeek"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="8"
                android:progress="2" />

            <TextView
                android:id="@+id/connectingLineWeight"
                style="@style/TextTheme"
                android:text="@string/connectingLineWeight" />

            <SeekBar
                android:id="@+id/connectingLineWeightSeek"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="15"
                android:progress="4" />

            <TextView
                android:id="@+id/thumbRadius"
                style="@style/TextTheme"
                android:text="@string/thumbRadius" />

            <SeekBar
                android:id="@+id/thumbRadiusSeek"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="30"
                android:progress="0" />

            <Button
                android:id="@+id/barColor"
                style="@style/ButtonTheme"
                android:text="@string/barColor" />

            <Button
                android:id="@+id/connectingLineColor"
                style="@style/ButtonTheme"
                android:text="@string/connectingLineColor" />

            <Button
                android:id="@+id/thumbColorNormal"
                style="@style/ButtonTheme"
                android:text="@string/thumbColorNormal" />

            <Button
                android:id="@+id/thumbColorPressed"
                style="@style/ButtonTheme"
                android:text="@string/thumbColorPressed" />
            <Button
                android:id="@+id/setImgToRangeBar"
                style="@style/ButtonTheme"
                android:text="@string/setImgToRangeBar"
                android:textColor="@android:color/holo_red_light" />
            <Button
                android:id="@+id/resetThumbColors"
                style="@style/ButtonTheme"
                android:text="@string/resetThumbColors"
                android:textColor="@android:color/holo_red_light" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>